# IC-G8

./: .gitignore  MakeFile  Makefile  notas.txt  notes.txt  out.txt  t1  t1.cpp  t2  t2.cpp  t3  t3.cpp  t4.cpp
Imagem/: CMakeCache.txt  CMakeLists.txt  DisplayImage  cmake_install.cmake  t1 copy.cpp  t1.cpp
audio/: Makefile  t1  t1.cpp  t2  t2.cpp  t3  t3.cpp  t4  t4.cpp  t5  t5.cpp
project1/Imagem/: Makefile
project1/Imagem/imagens_PPM/: baboon-2.ppm
project1/audio/: Makefile  t2.cpp  t3  t3.cpp  t4  t4.cpp  t5  t5.cpp
project1/report/: main.aux
project1/texto/: CMakeCache.txt  main.cpp  t2.cpp  t3.cpp  text.txt
project2/: BitStream.h  BitStreamTest  BitStreamTest.cpp  CMakeLists.txt  Golomb.h  Makefile  RUNNING_INSTRUCTIONS.txt  TODO.txt  coder  coder.cpp  decoded.txt  golomb.txt  golomb_tester  golomb_tester.cpp  input.txt  notes.txt  test.txt
project2/audio/: Makefile  TODO.txt  main.cpp  main.h  t1  t1.cpp  t2.cpp  t2_test.cpp  test.cpp  test_t1  test_t1.cpp
project2/include/: Golomb.h  Image_codec.h  compare.h  inter_frame_video_codec.h  intra_frame_video_codec.h  lossy_inter_video_codec.h  video_metrics.h
project2/report/: report.tex
project2/src/: BitStreamTest.cpp  coder.cpp  golomb_tester.cpp  main.cpp
report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
texto/: CMakeCache.txt  CMakeLists.txt  Makefile  Text  cmake_install.cmake  main.cpp  oldT4.cpp  t1.cpp  t2.cpp  t3.cpp  t4.cpp  test  test.cpp  text.txt
