cmake_minimum_required(VERSION 3.10)
project( Text )
find_package(Boost REQUIRED COMPONENTS locale)
find_package(Python3 COMPONENTS Development REQUIRED)
add_executable( Text main.cpp )

if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    target_link_libraries(Text ${Boost_LIBRARIES})
endif()
include_directories(${Python3_INCLUDE_DIRS})
target_link_libraries(Text ${Python3_LIBRARIES})